# portable_music_player

./: Cargo.toml  notes.txt  shell.nix
.helix/: languages.toml
src/: app.rs  fs.rs  input.rs  lib.rs  player.rs  ui.rs  visualizer.rs
