[package]
edition = "2021"
name    = "portable_music_player"
version = "0.1.0"

[[bin]]
name = "portable_music_player"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "esp32s3",
  "log-04",
  "unstable",
] }
log = "0.4.27"

bt-hci = { version = "0.2.1", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3", "log-04"] }
esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
esp-wifi = { version = "0.14.1", features = [
  "ble",
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "log-04",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
trouble-host = { version = "0.1.0", features = ["gatt"] }
embedded-sdmmc = "0.9.0"
nanomp3 = "0.1.1"
embedded-hal-bus = "0.3.0"
toml = { version = "0.9.8", default_features = false, features = ["display", "parse", "serde"] }
serde = { version = "1.0.228", default_features = false, features = ["derive"] }
heapless = { version = "0.9.1", features = ["serde"] }
toml_parser = { version = "1.0.4", default_features = false }
postcard = "1.1.3"
# rmp3 = "0.3.1"

pmp_config = { path = "../pmp_config"}
byteorder = { version = "1.4", default_features = false }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
